Another massive attack on checkstyle warnings
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@949271 13f79535-47bb-0310-9956-ffa450edef68